--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,3 +33,12 @@ article
 {
     margin: 20px;
 }
+body
+{
+    background: #f1f1f1;
+}
+.item
+{
+    display: flex;
+    justify-content: space-between;
+}
